tests/semantic/record_null/record_null.err
Error: Null constant used as a non-record in file record_null.dl at line 13
a(nil,nil,nil).
--^-------------
Error: Null constant used as a non-record in file record_null.dl at line 14
a("N",nil,*L[nil,nil]).
-------------^----------
Error: Null constant used as a non-record in file record_null.dl at line 15
a("N",nil,*L["N",*L[nil,nil]]).
--------------------^-----------
3 errors generated, evaluation aborted
