tests/semantic/record_null/record_null.dl
.type N
.type R = [ f : N ]
.type L = [ f : N , r : L ]

.decl a ( a : N, b : R , l : L )

// this is ok
a("N",nil,nil).
a("N",nil,*L["N",nil]).
a("N",nil,*L["N",*L["N",nil]]).

// this is not
a(nil,nil,nil).
a("N",nil,*L[nil,nil]).
a("N",nil,*L["N",*L[nil,nil]]).
